[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"
name = "csidh"
version = "0.1.0"

[dependencies]
failure = "0.1.3"
lazy_static = "1.2.0"
primal = "0.2.3"
rand = "0.6.1"
num-integer = "0.1.39"
num-traits = "0.2.6"

[dependencies.num-bigint]
version = "0.2.2"
features = ["rand"]
