[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
categories = ["wasm"]
description = "A CSIDH wasm library"
license = "Apache-2.0/MIT"
name = "rust-webpack"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-webpack-template"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.25"

[dependencies.rand]
version = "0.6.4"
features = ["wasm-bindgen"]

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.5"

[dependencies.csidh]
optional = false
path = "../../."

[dependencies.web-sys]
features = ["Document", "Element", "HtmlElement", "Node", "Window", "Performance"]
version = "0.3"

[dependencies.wee_alloc]
optional = true
version = "0.4.2"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]
